# Eigen

./: .gitignore  README.md  build.sh  com.github.elahpeca.Eigen.json  flatpak-build.sh  meson.build
build-aux/flatpak/: com.githib.elahpeca.Eigen.yml  com.github.elahpeca.Eigen.json  com.github.elahpeca.Eigen.yml
data/: com.github.elahpeca.Eigen.desktop.in  com.github.elahpeca.Eigen.gschema.xml  com.github.elahpeca.Eigen.gschema.xml.in  com.github.elahpeca.Eigen.metainfo.xml.in  eigen.gresource.xml.in  eigen.gschema.xml.in  meson.build  style.css
data/icons/: meson.build
data/ui/: meson.build  shortcuts.blp  window.blp
eigen/: constants.py  constants.py.in  eigen.gresource.xml  eigen.in  main.py  meson.build  window.py  window.ui
eigen/ui/: window.py
po/: POTFILES  meson.build
src/: application.py  eigen.gresource.xml  main.py  meson.build  style.css
src/gtk/: window.ui
src/math/: matrix_data.py  meson.build
src/utils/: decomposition_handler.py  meson.build  size_handler.py
src/widgets/: entry.py  matrix.py  matrix_view.py  meson.build  numeric_entry.py  window.py
